"making new file for the features"

--- a/home.css
+++ b/home.css
@@ -23,12 +23,12 @@ nav{
 }
 
 .carousel-caption > h5{
-    color: #111112;
+    color: white;
     font-size: 81px;
 }
 
 .carousel-caption > p{
-    color: #111112;
+    color: whitesmoke;
     font-size: 32px
 }
 
