--- a/OnAuction.css
+++ b/OnAuction.css
@@ -5,8 +5,34 @@
 
 .card{
     max-width: 800px;
+    padding: 20px;
+    border: 2px solid #111112;
+    border-radius: 20px;
+    background-color: #90A955;
 }
 
 .card > img{
     max-width: 300px;
+    padding: 20px;
+    border: 1px solid #111112;
+    border-radius: 10px;
+    background-color: white;
 }
+
+.card-title{
+    font-size: 40px;
+    color: #111112;
+    padding: 5px;
+}
+
+.card-text{
+    color: #111112;
+}
+
+.btn{
+    background-color: #D9D9D9;
+}
+.btn:hover{
+    background-color: #ECF39E;
+}
+
